--- a/debian/control
+++ b/debian/control
@@ -3,15 +3,16 @@ Section: admin
 Priority: important
 Maintainer: Adam Israel <adam@battleaxe.net>
 Uploaders: Adam Israel <adam@battleaxe.net>
-Standards-Version: 3.6.1
 Build-Depends: python-apt
 
 Package: apt-checkpoint
 Architecture: any
 Depends: python2.3, python-apt, wget, dpkg 
 Priority: important
-Section: base
-Description: Test description
- This is Debian's next generation front-end for the dpkg package manager.
- It provides the apt-get utility and APT dselect method that provides a 
- simpler, safer way to install and upgrade packages.
+Section: admin
+Description: Create, compare, and rollback point-in-time snapshots of a Debian system
+ This command line utility allows you to create, compare, and rollback
+ snapshots of a Debian system.  These checkpoints record the installation
+ state of installed packages and offers a way to restore a Debian system
+ to its previously working state in the case of broken packages 
+ or failed upgrades.
